完善 insert(), update(), delete()

--- a/templates/edits/edit song.html
+++ b/templates/edits/edit song.html
@@ -11,9 +11,8 @@
 		// check completion
 		// name, artist, link, album, series, time
 		function check_values() {
-			if ($("#name").val() && $("#artist").val() &&
-				$("#link").val() && $("#album").val() &&
-				$("#series").val() && $("#time").val()) {
+			if ($("#name").val()  && $("#link").val()  && $("#time").val()) {
+				//&& $("#artist").val() && $("#album").val()&& $("#series").val()
 
 				alert("送出!");
 				return true;
