--- a/templates/song.html
+++ b/templates/song.html
@@ -83,7 +83,18 @@
 								<a href="{{ url_for('edit_song', id= e['id']) }}" class="btn btn-primary btn-sm"><i class="fas fa-pen"></i></a>
 							</td>
 							<td>
-								<a href="{{ url_for('edit_song', id= e['id']) }}" class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i></a>
+								<!--form action="{{ url_for('delete_song', id=e['id']) }}" method="POST" class="btn btn-danger btn-sm">
+									<input type="submit" value=''><i class="fas fa-trash-alt"></i>
+								</form-->
+								<!--a href="{{ url_for('delete_song', id= e['id'], method='POST') }}" class="btn btn-danger btn-sm">
+									<form action="{{ url_for('delete_song', id=e['id']) }}" method="POST">
+										<input type="submit" value='' style="border: 0;background:none;"></i>
+									</form>
+								<i class="fas fa-trash-alt"></i></a-->
+								<form action="{{ url_for('delete_song', id=e['id']) }}" method="POST" class="btn btn-danger btn-sm">
+									<button type="submit" style="border: 0; background: none;"><i class="fas fa-trash-alt"></i></button>
+								</form>
+								<!--<a href="{{ url_for('delete_song', id=e['id']) }}" class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i></a>-->
 							</td>
 							<td>
 								<a href="{{ url_for('add_to_list', id=e['id']) }}" class="btn btn-sm btn-success"><i class="fas fa-plus"></i></a>
