--- a/templates/init.html
+++ b/templates/init.html
@@ -45,9 +45,9 @@
 							<td> {{ e[0] }} </td>
 							<td> {{ e['name'] }} </td>
 							<td> {{ e['artist'] }} </td>
-							<td> e['album'] </td>
-							<td> e['series'] </td>
-							<td> e['time'] </td>
+							<td> {{ e['album'] }} </td>
+							<td> {{ e['series'] }} </td>
+							<td> {{ e['time'] }} </td>
 							<td>
 								<!--<a href="edit" class="btn btn-info btn-sm">編輯</a>-->
 								<a href="delete" class="btn btn-info btn-sm btn-danger" style="margin-left:10px">刪除</a>
@@ -59,6 +59,11 @@
 			</div>
 		</div>
 	</div>
+	<script>
+		//{%- with messages = get_flashed_messages() -%}{%- if messages -%}{%- for message in messages %}
+		alert('{{ message }}');
+		//{% endfor -%}{%- endif -%}{%- endwith %}
+	</script>
 </body>
 
 </html>
