--- a/templates/album.html
+++ b/templates/album.html
@@ -21,43 +21,48 @@
 		</div>
 		
 		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9" style="margin-top:20px; font-size: 25px">
-			<a href="/album/edit/" class="btn btn-warning" >新增專輯</a>
+			<a href="{{ url_for('create_album') }}" class="btn btn-warning" >新增專輯</a>
 		</div>
 		
 		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
 			<table id="myTable" class="table table-striped table-bordered order-table" style="text-align:center; font-size: 20px; margin-top:30px ">
 				<thead style="background-color:#555; color: white;">
-				<tr>
-					<td><b> 專輯名 </b></td>
-					<td><b> 歌手 </b></td>
-					<td><b> 年份 </b></td>
-					<td><b> 編輯 </b></td>
-					<td><b> 刪除 </b></td>
-					<td><b> 查詢歌曲 </b></td>
-				</tr>
+					<tr>
+						<td><b> 專輯名 </b></td>
+						<td><b> 歌手 </b></td>
+						<td><b> 年份 </b></td>
+						<td><b> 編輯 </b></td>
+						<td><b> 刪除 </b></td>
+						<td><b> 查詢歌曲 </b></td>
+					</tr>
 				</thead>
 				<tbody>
-				
-				<tr>
-					<td> [0] </td>
-					<td> [1] </td>
-					<td> [2] </td>
-					<td>
-					<a href="/album/edit/" class="btn btn-primary btn-sm"><i class="fas fa-pen"></i></a>
-					</td>
-					<td>
-					<a href="/album/delete/" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a>
-					</td>
-					<td>
-					<a href="/album/search/" class="btn btn-sm btn-success"><i class="fas fa-arrow-right"></i></a>
-					</td>
-				</tr>
-				
+					{% for e in data -%}
+					<tr>
+						<td> {{ e['name'] }} </td>
+						<td> {{ e['year'] }} </td>
+						<td> {{ e['artist'] }} </td>
+						<td>
+							<a href="{{ url_for('edit_album', name=e['name']) }}" class="btn btn-primary btn-sm"><i class="fas fa-pen"></i></a>
+						</td>
+						<td>
+							<a href="{{ url_for('delete_album', name=e['name']) }}" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a>
+						</td>
+						<td>
+							<a href="{{ url_for('song', album=e['name']) }}" class="btn btn-sm btn-success"><i class="fas fa-arrow-right"></i></a>
+						</td>
+					</tr>
+					{%- endfor %}
 				</tbody>
 			</table>
 		</div>
 		</div>
 		
 	</div>
+	<script>
+		//{%- with messages = get_flashed_messages() -%}{%- if messages -%}{%- for message in messages %}
+		alert('{{ message }}');
+		//{% endfor -%}{%- endif -%}{%- endwith %}
+	</script>
 </body>
 </html>
