album page  update delete 也好了 全部完成

--- a/templates/edits/edit album.html
+++ b/templates/edits/edit album.html
@@ -32,7 +32,7 @@
 			編輯專輯資訊
 		</div>
 
-		<form action="default" method="POST" name="form1" style="font-size: 20px">
+		<form action="default" method="POST" name="form" style="font-size: 20px">
 			<div class="form-group row" style="margin-top:30px">
 				<label class="col-form-label" style="margin-left:15px">專輯名</label>
 				<div class="col-7">
@@ -63,9 +63,6 @@
 			<!-- 返回按鈕-->
 			<input type="button" id="back" class="btn btn-warning" value="返回" href="javascript:;"
 				onclick="location.href='/';" style="margin-bottom:50px; margin-left:10px">
-
-			<input type="button" id="test" class="btn btn-warning" value="測試" href="javascript:;" onclick="dotest()"
-				style="margin-bottom:50px; margin-left:20px">
 		</form>
 	</div>
 
