--- a/templates/album.html
+++ b/templates/album.html
@@ -46,7 +46,10 @@
 							<a href="{{ url_for('edit_album', name=e['name']) }}" class="btn btn-primary btn-sm"><i class="fas fa-pen"></i></a>
 						</td>
 						<td>
-							<a href="{{ url_for('delete_album', name=e['name']) }}" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a>
+							<form action="{{ url_for('delete_album', name=e['name']) }}" method="POST" class="btn btn-sm btn-danger">
+								<button type="submit" style="border: 0; background: none;"><i class="fas fa-trash-alt"></i></button>
+							</form>
+							<!--a href="{{ url_for('delete_album', name=e['name']) }}" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a-->
 						</td>
 						<td>
 							<a href="{{ url_for('song', album=e['name']) }}" class="btn btn-sm btn-success"><i class="fas fa-arrow-right"></i></a>
