--- a/templates/artist.html
+++ b/templates/artist.html
@@ -21,7 +21,7 @@
 		</div>
 		
 		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9" style="margin-top:20px; font-size: 25px">
-			<a href="/artist/edit/" class="btn btn-warning" >新增演出者</a>
+			<a href="{{ url_for('create_artist') }}" class="btn btn-warning" >新增演出者</a>
 		</div>
 		
 		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
@@ -36,21 +36,21 @@
 				</tr>
 				</thead>
 				<tbody>
-				
-				<tr>
-					<td> [0] </td>
-					<td> [1] </td>
-					<td>
-					<a href="/artist/edit/" class="btn btn-primary btn-sm"><i class="fas fa-pen"></i></a>
-					</td>
-					<td>
-					<a href="/artist/delete/" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a>
-					</td>
-					<td>
-					<a href="/artist/search/" class="btn btn-sm btn-success"><i class="fas fa-arrow-right"></i></a>
-					</td>
-				</tr>
-				
+					{% for e in data %}
+					<tr>
+						<td> {{ e['name'] }} </td>
+						<td> {{ e['company'] }} </td>
+						<td>
+							<a href="{{ url_for('edit_artist', name=e['name']) }}" class="btn btn-primary btn-sm"><i class="fas fa-pen"></i></a>
+						</td>
+						<td>
+							<a href="{{ url_for('delete_artist', name=e['name']) }}" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a>
+						</td>
+						<td>
+							<a href="{{ url_for('song', artist=e['name']) }}" class="btn btn-sm btn-success"><i class="fas fa-arrow-right"></i></a>
+						</td>
+					</tr>
+					{% endfor %}
 				</tbody>
 			</table>
 		</div>
