--- a/templates/macros/include datas.html
+++ b/templates/macros/include datas.html
@@ -2,8 +2,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>MuXic</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="https://kit.fontawesome.com/9b01b34a95.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<link rel="shortcut icon" href="https://i.imgur.com/zqbEUQ2.png"  type="image/ico" />
+	<link rel="stylesheet" href="{{ url_for('static', filename='includes/bootstrap 4.0.0.min.css') }}">
+	<script src="{{ url_for('static', filename='includes/bootstrap 4.0.0.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='includes/fontawesome.js') }}"></script>
+	<script src="{{ url_for('static', filename='includes/jquery 3.4.1.min.js') }}"></script>
+	<link rel="shortcut icon" href="{{ url_for('static', filename='icon.png') }}"  type="image/ico" />
