--- a/templates/artist.html
+++ b/templates/artist.html
@@ -57,5 +57,10 @@
 		</div>
 		
 	</div>
+	<script>
+		//{%- with messages = get_flashed_messages() -%}{%- if messages -%}{%- for message in messages %}
+		alert('{{ message }}');
+		//{% endfor -%}{%- endif -%}{%- endwith %}
+	</script>
 </body>
 </html>
