artist update delete complete (註: 也找到了讓刪除鍵的垃圾桶變回白色的方法)

--- a/templates/artist.html
+++ b/templates/artist.html
@@ -44,7 +44,10 @@
 							<a href="{{ url_for('edit_artist', name=e['name']) }}" class="btn btn-primary btn-sm"><i class="fas fa-pen"></i></a>
 						</td>
 						<td>
-							<a href="{{ url_for('delete_artist', name=e['name']) }}" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a>
+							<form action="{{ url_for('delete_artist', name=e['name']) }}" method="POST">
+								<button type="submit"class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></button>
+							</form>
+							<!--a href="{{ url_for('delete_artist', name=e['name']) }}" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a-->
 						</td>
 						<td>
 							<a href="{{ url_for('song', artist=e['name']) }}" class="btn btn-sm btn-success"><i class="fas fa-arrow-right"></i></a>
