--- a/templates/series.html
+++ b/templates/series.html
@@ -21,7 +21,7 @@
 		</div>
 		
 		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9" style="margin-top:20px; font-size: 25px">
-			<a href="/series/edit/" class="btn btn-warning" >新增系列</a>
+			<a href="{{ url_for('create_series') }}" class="btn btn-warning" >新增系列</a>
 		</div>
 		
 		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
@@ -36,26 +36,31 @@
 				</tr>
 				</thead>
 				<tbody>
-				
-				<tr>
-					<td> [0] </td>
-					<td> [1] </td>
-					<td>
-					<a href="/series/edit/" class="btn btn-primary btn-sm"><i class="fas fa-pen"></i></a>
-					</td>
-					<td>
-					<a href="/series/delete/" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a>
-					</td>
-					<td>
-					<a href="/series/search/" class="btn btn-sm btn-success"><i class="fas fa-arrow-right"></i></a>
-					</td>
-				</tr>
-				
+					{% for e in data -%}
+					<tr>
+						<td> {{ e['name'] }} </td>
+						<td> {{ e['type'] }} </td>
+						<td>
+							<a href="{{ url_for('edit_series', name=e['name']) }}" class="btn btn-primary btn-sm"><i class="fas fa-pen"></i></a>
+						</td>
+						<td>
+							<a href="{{ url_for('delete_series', name=e['name']) }}" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a>
+						</td>
+						<td>
+							<a href="{{ url_for('song', series=e['name']) }}" class="btn btn-sm btn-success"><i class="fas fa-arrow-right"></i></a>
+						</td>
+					</tr>
+					{%- endfor %}
 				</tbody>
 			</table>
 		</div>
 		</div>
 		
 	</div>
+	<script>
+		//{%- with messages = get_flashed_messages() -%}{%- if messages -%}{%- for message in messages %}
+		alert('{{ message }}');
+		//{% endfor -%}{%- endif -%}{%- endwith %}
+	</script>
 </body>
 </html>
