--- a/templates/series.html
+++ b/templates/series.html
@@ -44,7 +44,9 @@
 							<a href="{{ url_for('edit_series', name=e['name']) }}" class="btn btn-primary btn-sm"><i class="fas fa-pen"></i></a>
 						</td>
 						<td>
-							<a href="{{ url_for('delete_series', name=e['name']) }}" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a>
+							<form action="{{ url_for('delete_series', name=e['name']) }}" method="POST">
+								<button type="submit"class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></button>
+							</form>
 						</td>
 						<td>
 							<a href="{{ url_for('song', series=e['name']) }}" class="btn btn-sm btn-success"><i class="fas fa-arrow-right"></i></a>
