--- a/templates/edits/edit artist.html
+++ b/templates/edits/edit artist.html
@@ -34,16 +34,16 @@
 			<div class="form-group row" style="margin-top:30px">
 				<label class="col-form-label" style="margin-left:15px">歌手</label>
 				<div class="col-7">
-					<input class="form-control" type="text" name="name" value='{{ name }}' placeholder='name...>'
-						id="name" style="margin-left:20px">
+					<input class="form-control" type="text" name="name" value='{{ name }}' placeholder="輸入歌手"
+						id="name" maxlength="20" style="margin-left:36px">
 				</div>
 			</div>
 
 			<div class="form-group row" style="margin-top:20px">
 				<label class="col-form-label" style="margin-left:15px">唱片公司</label>
 				<div class="col-7">
-					<input class="form-control" type="text" name="company" value='{{ company }}' placeholder='company...>'
-						id="company" style="margin-left:20px">
+					<input class="form-control" type="text" name="company" value='{{ company }}' placeholder="輸入唱片公司"
+						id="company" maxlength="20" style="margin-left:-5px">
 				</div>
 			</div>
 
