--- a/templates/edits/edit series.html
+++ b/templates/edits/edit series.html
@@ -35,16 +35,16 @@
 			<div class="form-group row" style="margin-top:30px">
 				<label class="col-form-label" style="margin-left:15px">系列名</label>
 				<div class="col-7">
-					<input class="form-control" type="text" name="name" value='{{ name }}' placeholder='name...>'
-						id="name" style="margin-left:20px">
+					<input class="form-control" type="text" name="name" value='{{ name }}' placeholder="輸入系列名"
+						id="name" maxlength="20" style="margin-left:2px">
 				</div>
 			</div>
 
 			<div class="form-group row" style="margin-top:20px">
 				<label class="col-form-label" style="margin-left:15px">種類</label>
 				<div class="col-7">
-					<input class="form-control" type="text" name="type" value='{{ type }}' placeholder='type...>'
-						id="type" style="margin-left:20px">
+					<input class="form-control" type="text" name="type" value='{{ type }}' placeholder="輸入種類"
+						id="type" maxlength="20" style="margin-left:20px">
 				</div>
 			</div>
 
