--- a/templates/info.html
+++ b/templates/info.html
@@ -13,14 +13,14 @@
 	<div class="row">
 {% include "macros/nav.html" %}
 		<div  class="col">
-		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-			<span style="color:black;margin-top:40px;margin-left:10px;font-size: 40px">
+		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9" style="margin-top:15px">
+			<span style="font-size: 40px">
 				<i class="fas fa-info-circle"></i>
 				關於本系統
 			</span>
 		</div>
 		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9" style="margin-top:20px;font-size :20px">
-			v0.1alpha
+			v0.2beta
 			<br>
 			<br>
 			孟學霸
