--- a/templates/album.html
+++ b/templates/album.html
@@ -13,41 +13,41 @@
 	<div class="row">
 {% include "macros/nav.html" %}
 		<div  class="col">
-		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-			<span style="color:black;margin-top:40px;margin-left:10px;font-size: 40px">
+		<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10" style="margin-top:15px">
+			<span style="font-size: 40px">
 				<i class="fas fa-compact-disc"></i>
 				專輯清單
 			</span>
 		</div>
 		
-		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9" style="margin-top:20px; font-size: 25px">
+		<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10" style="margin-top:20px; font-size: 25px">
 			<a href="{{ url_for('create_album') }}" class="btn btn-warning" >新增專輯</a>
 		</div>
 		
-		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+		<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
 			<table id="myTable" class="table table-striped table-bordered order-table" style="text-align:center; font-size: 20px; margin-top:30px ">
 				<thead style="background-color:#555; color: white;">
 					<tr>
 						<td><b> 專輯名 </b></td>
 						<td><b> 歌手 </b></td>
 						<td><b> 年份 </b></td>
-						<td><b> 編輯 </b></td>
-						<td><b> 刪除 </b></td>
-						<td><b> 查詢歌曲 </b></td>
+						<td width="80"><b> 編輯 </b></td>
+						<td width="80"><b> 刪除 </b></td>
+						<td width="110"><b> 查詢歌曲 </b></td>
 					</tr>
 				</thead>
 				<tbody>
 					{% for e in data -%}
 					<tr>
 						<td> {{ e['name'] }} </td>
-						<td> {{ e['year'] }} </td>
 						<td> {{ e['artist'] }} </td>
+						<td> {{ e['year'] }} </td>
 						<td>
 							<a href="{{ url_for('edit_album', name=e['name']) }}" class="btn btn-primary btn-sm"><i class="fas fa-pen"></i></a>
 						</td>
 						<td>
-							<form action="{{ url_for('delete_album', name=e['name']) }}" method="POST" class="btn btn-sm btn-danger">
-								<button type="submit" style="border: 0; background: none;"><i class="fas fa-trash-alt"></i></button>
+							<form action="{{ url_for('delete_album', name=e['name']) }}" method="POST">
+								<button type="submit" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></button>
 							</form>
 							<!--a href="{{ url_for('delete_album', name=e['name']) }}" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></a-->
 						</td>
