--- a/templates/artist.html
+++ b/templates/artist.html
@@ -13,26 +13,26 @@
 	<div class="row">
 {% include "macros/nav.html" %}
 		<div  class="col">
-		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-			<span style="color:black;margin-top:40px;margin-left:10px;font-size: 40px">
+		<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10" style="margin-top:15px">
+			<span style="font-size: 40px">
 				<i class="fas fa-microphone"></i>
 				演出者清單
 			</span>
 		</div>
 		
-		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9" style="margin-top:20px; font-size: 25px">
+		<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10" style="margin-top:20px; font-size: 25px">
 			<a href="{{ url_for('create_artist') }}" class="btn btn-warning" >新增演出者</a>
 		</div>
 		
-		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+		<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
 			<table id="myTable" class="table table-striped table-bordered order-table" style="text-align:center; font-size: 20px; margin-top:30px ">
 				<thead style="background-color:#555; color: white;">
 				<tr>
 					<td><b> 歌手 </b></td>
 					<td><b> 唱片公司 </b></td>
-					<td><b> 編輯 </b></td>
-					<td><b> 刪除 </b></td>
-					<td><b> 查詢歌曲 </b></td>
+					<td width="80"><b> 編輯 </b></td>
+					<td width="80"><b> 刪除 </b></td>
+					<td width="110"><b> 查詢歌曲 </b></td>
 				</tr>
 				</thead>
 				<tbody>
