--- a/templates/song.html
+++ b/templates/song.html
@@ -13,20 +13,23 @@
 	<div class="row">
 {% include "macros/nav.html" %}
 		<div class="col">
-			<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
-				<span style="color:black;margin-top:40px;margin-left:10px;font-size: 40px">
+			<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10" style="margin-top:15px">
+				<span style="font-size: 40px">
 					<i class="fas fa-music"></i>
 					歌曲清單
 				</span>
 			</div>
-			<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9" style="margin-top:20px; font-size: 25px">
+			<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10" style="margin-top:20px; font-size: 25px">
 				<a href="{{ url_for('create_song') }}" class="btn btn-warning">新增歌曲</a>
 			</div>
 			<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8" style="margin-top:20px">
-				<h2>查詢</h2>
+				<h2>
+					<i class="fas fa-search"></i>
+					查詢
+				</h2>
 				<form action="{{ url_for('song')}}" method="GET" name="formS">
 					<table id="STable" class="table table-striped table-bordered order-table"
-						style="text-align:center; font-size: 20px">
+						style="text-align:center; font-size: 20px; margin-top:20px">
 						<thead style="background-color:#555; color: white;">
 							<tr>
 								<td><b> 曲名 </b></td>
@@ -38,16 +41,16 @@
 						<tbody>
 							<tr>
 								<td>
-									<input class="form-control" name="name" placeholder=[0]>
+									<input class="form-control" name="name" maxlength="100" placeholder="輸入曲名">
 								</td>
 								<td>
-									<input class="form-control" name="artist" placeholder=[1]>
+									<input class="form-control" name="artist" maxlength="20" placeholder="輸入歌手">
 								</td>
 								<td>
-									<input class="form-control" name="album" placeholder=[2]>
+									<input class="form-control" name="album" maxlength="20" placeholder="輸入專輯">
 								</td>
 								<td>
-									<input class="form-control" name="series" placeholder=[3]>
+									<input class="form-control" name="series" maxlength="20" placeholder="輸入系列">
 								</td>
 							</tr>
 						</tbody>
@@ -56,9 +59,14 @@
 					<input type="submit" id="submit" class="btn btn-primary" value="開始搜尋" onclick="">
 				</form>
 			</div>
-			<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+			
+			<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10" style="margin-top: 20px">
+				<h2>
+					<i class="fas fa-bars"></i>
+					查詢結果
+				</h2>
 				<table id="myTable" class="table table-striped table-bordered order-table"
-					style="text-align:center; font-size: 20px; margin-top:30px ">
+					style="text-align:center; font-size: 20px; margin-top:20px">
 					<thead style="background-color:#555; color: white;">
 						<tr>
 							<td><b> 曲名 </b></td>
@@ -66,9 +74,9 @@
 							<td><b> 專輯 </b></td>
 							<td><b> 系列 </b></td>
 							<td><b> 長度 </b></td>
-							<td><b> 編輯 </b></td>
-							<td><b> 刪除 </b></td>
-							<td><b> 新增播放 </b></td>
+							<td width="80"><b> 編輯 </b></td>
+							<td width="80"><b> 刪除 </b></td>
+							<td width="110"><b> 新增播放 </b></td>
 						</tr>
 					</thead>
 					<tbody>
@@ -83,18 +91,9 @@
 								<a href="{{ url_for('edit_song', id= e['id']) }}" class="btn btn-primary btn-sm"><i class="fas fa-pen"></i></a>
 							</td>
 							<td>
-								<!--form action="{{ url_for('delete_song', id=e['id']) }}" method="POST" class="btn btn-danger btn-sm">
-									<input type="submit" value=''><i class="fas fa-trash-alt"></i>
-								</form-->
-								<!--a href="{{ url_for('delete_song', id= e['id'], method='POST') }}" class="btn btn-danger btn-sm">
-									<form action="{{ url_for('delete_song', id=e['id']) }}" method="POST">
-										<input type="submit" value='' style="border: 0;background:none;"></i>
-									</form>
-								<i class="fas fa-trash-alt"></i></a-->
-								<form action="{{ url_for('delete_song', id=e['id']) }}" method="POST" class="btn btn-danger btn-sm">
-									<button type="submit" style="border: 0; background: none;"><i class="fas fa-trash-alt"></i></button>
+								<form action="{{ url_for('delete_song', id=e['id']) }}" method="POST">
+									<button type="submit" class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i></button>
 								</form>
-								<!--<a href="{{ url_for('delete_song', id=e['id']) }}" class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i></a>-->
 							</td>
 							<td>
 								<a href="{{ url_for('add_to_list', id=e['id']) }}" class="btn btn-sm btn-success"><i class="fas fa-plus"></i></a>
