--- a/templates/series.html
+++ b/templates/series.html
@@ -52,17 +52,13 @@
 							<a href="{{ url_for('song', series=e['name']) }}" class="btn btn-sm btn-success"><i class="fas fa-arrow-right"></i></a>
 						</td>
 					</tr>
-					{%- endfor %}
+					{% endfor -%}
 				</tbody>
 			</table>
 		</div>
 		</div>
 		
 	</div>
-	<script>
-		//{%- with messages = get_flashed_messages() -%}{%- if messages -%}{%- for message in messages %}
-		alert('{{ message }}');
-		//{% endfor -%}{%- endif -%}{%- endwith %}
-	</script>
+{% include "macros/flash msg.html" %}
 </body>
 </html>
