--- a/templates/song.html
+++ b/templates/song.html
@@ -99,19 +99,14 @@
 								<a href="{{ url_for('add_to_list', id=e['id']) }}" class="btn btn-sm btn-success"><i class="fas fa-plus"></i></a>
 							</td>
 						</tr>
-						{%- endfor %}
-
+						{% endfor -%}
 					</tbody>
 				</table>
 			</div>
 		</div>
 
 	</div>
-	<script>
-		//{%- with messages = get_flashed_messages() -%}{%- if messages -%}{%- for message in messages %}
-		alert('{{ message }}');
-		//{% endfor -%}{%- endif -%}{%- endwith %}
-	</script>
+{% include "macros/flash msg.html" %}
 </body>
 
 </html>
