--- a/templates/edits/edit album.html
+++ b/templates/edits/edit album.html
@@ -61,8 +61,8 @@
 			<input type="submit" id="submit" class="btn btn-primary" value="送出" onclick="return myfunc()"
 				style="margin-bottom:50px">
 			<!-- 返回按鈕-->
-			<input type="button" id="back" class="btn btn-warning" value="返回" href="javascript:;"
-				onclick="location.href='/';" style="margin-bottom:50px; margin-left:10px">
+			<input type="button" id="back" class="btn btn-warning" value="返回"
+				onclick="history.back();" style="margin-bottom:50px; margin-left:10px">
 		</form>
 	</div>
 {% include "macros/flash msg.html" %}
