--- a/templates/init.html
+++ b/templates/init.html
@@ -16,7 +16,7 @@
 		<div class="col">
 			<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9" style="margin-top:30px">
 				<iframe width="848" height="480"
-					src="https://www.youtube-nocookie.com/embed/qUf4MlEkVxk?rel=0&autoplay=1" frameborder="0"
+					src="https://www.youtube-nocookie.com/embed/{{ data[0]['link'] }}?rel=0&autoplay=1" frameborder="0"
 					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen></iframe>
 			</div>
