--- a/templates/test.html
+++ b/templates/test.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<script src="{{ url_for('static', filename='includes/jquery 3.4.1.min.js') }}"></script>
+	<link rel="stylesheet" href="{{ url_for('static', filename='includes/bootstrap 4.0.0.min.css') }}">
+	<script src="{{ url_for('static', filename='includes/bootstrap 4.0.0.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='includes/fontawesome.js') }}"></script>
     <title>Document</title>
+	<script>
+		$(document).ready(function () {
+            $.post("{{ url_for('test') }}",
+                {},
+                function(data, status) {
+                    //$("#test").text(data);
+                    console.log(data);
+                }
+            );
+            $("#update").click(function() {
+                $.get("{{ url_for('small_playlist') }}", function(data, status) {
+                    $("#tbody").html(data);
+                    // console.log(data);
+                });
+            });
+		});
+	</script>
 </head>
 <body>
-    <form action="{{ url_for('for_testing') }}">
-        input num: 
-        <input type="number" name="input num" id="num">
-        <input type="submit">
-    </form>
+    <h1 id='test'></h1>
+    <table id="myTable" class="table table-striped table-bordered order-table"
+        style="text-align:center; font-size: 20px">
+        <thead style="background-color:#555; color: white;">
+            <tr>
+                <td><b> 播放順序 </b></td>
+                <td><b> 曲名 </b></td>
+                <td><b> 歌手 </b></td>
+                <td><b> 專輯 </b></td>
+                <td><b> 系列 </b></td>
+                <td><b> 時間 </b></td>
+                <td><b> 刪除 </b></td>
+            </tr>
+        </thead>
+        <tbody id="tbody">
+{% include "small_playlist.html" %}
+        </tbody>
+    </table>
+    <button id = 'update'>Click!</button>
 </body>
 </html>
