--- a/templates/info.html
+++ b/templates/info.html
@@ -20,7 +20,7 @@
 			</span>
 		</div>
 		<div class="col-xs-9 col-sm-9 col-md-9 col-lg-9" style="margin-top:20px;font-size :20px">
-			v0.2beta
+			v0.2 gamma
 			<br>
 			<br>
 			孟學霸
@@ -28,10 +28,16 @@
 			<br>
 			團隊出品
 			<br>
+			link: <a href="https://github.com/clashroyaleisgool/database-project" target='_blank'>Github</a>
+			<br>
 			<br>
 			1072資料庫理論
 			<br>
 			期末Project
+			<br>
+			教師: <a href="http://www.csie.ntnu.edu.tw/~jlkoh/index.htm" target='_blank'>柯嘉玲老師</a>
+			<br><br>
+			關鍵字: database, mysql, appserv, PyMySQL, flask, jinja2, bootstrap, jquery, ajax, MVC, SPA
 		</div>
 		
 		</div>
