更新老師名字

--- a/templates/info.html
+++ b/templates/info.html
@@ -35,7 +35,7 @@
 			<br>
 			期末Project
 			<br>
-			教師: <a href="http://www.csie.ntnu.edu.tw/~jlkoh/index.htm" target='_blank'>柯嘉玲老師</a>
+			教師: <a href="http://www.csie.ntnu.edu.tw/~jlkoh/index.htm" target='_blank'>柯佳伶老師</a>
 			<br><br>
 			關鍵字: database, mysql, appserv, PyMySQL, flask, jinja2, bootstrap, jquery, ajax, MVC, SPA
 		</div>
